--- a/bin/build
+++ b/bin/build
@@ -1,8 +1,17 @@
 #!/usr/bin/env bash
+set -eu
+set -o pipefail
 
-rm -rf node_modules
-npm -g install yarn
-yarn install
+bp_dir=$(cd "$(dirname "$0")"/..; pwd)
+build_dir=$(pwd)
+layers_dir=$1
+platform_dir=$2
 
-# if yarn build, then build
-# if yarn heroku-build, then heroku-build
+# shellcheck source=/dev/null
+source "$bp_dir/lib/build.sh"
+rm -rf "$build_dir/node_modules"
+
+run_prebuild "$build_dir"
+install_or_reuse_node_modules "$build_dir" "$layers_dir/node_modules"
+run_build "$build_dir"
+write_launch_toml "$build_dir/package.json" "$layers_dir/launch.toml"
