add support for heroku-20 and bionic stacks

--- a/buildpack.toml
+++ b/buildpack.toml
@@ -7,3 +7,9 @@ name = "Yarn Buildpack"
 
 [[stacks]]
 id = "heroku-18"
+
+[[stacks]]
+id = "heroku-20"
+
+[[stacks]]
+id = "io.buildpacks.stacks.bionic"
