--- a/buildpack.toml
+++ b/buildpack.toml
@@ -1,9 +1,15 @@
-api = "0.2"
+api = "0.4"
 
 [buildpack]
 id = "fagiani/nodejs-yarn"
-version = "0.1.2"
+version = "0.2.0"
 name = "Yarn Buildpack"
+homepage = "https://github.com/fagiani/nodejs-yarn-buildpack"
+description = "Runs Yarn after nodejs install"
+keywords = ["nodejs", "node", "yarn", "install", "javascript"]
+
+[[buildpack.licenses]]
+type = "MIT"
 
 [[stacks]]
 id = "heroku-18"
